update: added morphological features

--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -370,30 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'class': 5.0, 'red_mean': 87.94549186862245, 'green_mean': 68.95172991071429, 'blue_mean': 54.98710538903061, 'red_std': 93.03247589992225, 'green_std': 72.76322414725118, 'blue_std': 66.88230646495538, 'red_skew': 0.25933628381769036, 'green_skew': 0.3171893862426002, 'blue_skew': 0.8298783582245808, 'red_kurt': 1.2578688983192092, 'green_kurt': 1.4582052003674018, 'blue_kurt': 2.181604609322804, 'h_mean': 19.26694036989796, 's_mean': 58.287228954081634, 'v_mean': 93.87715242346938, 'h_std': 34.82264323680371, 's_std': 75.66833074825696, 'v_std': 95.82871694860215, 'h_skew': 1.9880169437460515, 's_skew': 0.9467711916806332, 'v_skew': 0.12301197291796713, 'h_kurt': 6.117432537381793, 's_kurt': 2.307829307448198, 'v_kurt': 1.141139840879176, 'area': 0.0, 'perimeter': 0.0, 'circularity': 0.0, 'convexity': 0.0}\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "If using all scalar values, you must pass an index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[265], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m feature_vector \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mclass\u001b[39m\u001b[39m'\u001b[39m: label, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfeature_vector}\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(feature_vector)\n\u001b[1;32m---> 15\u001b[0m features_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([features_df, pd\u001b[39m.\u001b[39;49mDataFrame(feature_vector)], ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\Enzo\\Documents\\GitHub\\CSINTSY-rotten-fruits-classification\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:708\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    702\u001b[0m     mgr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_init_mgr(\n\u001b[0;32m    703\u001b[0m         data, axes\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m: index, \u001b[39m\"\u001b[39m\u001b[39mcolumns\u001b[39m\u001b[39m\"\u001b[39m: columns}, dtype\u001b[39m=\u001b[39mdtype, copy\u001b[39m=\u001b[39mcopy\n\u001b[0;32m    704\u001b[0m     )\n\u001b[0;32m    706\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, \u001b[39mdict\u001b[39m):\n\u001b[0;32m    707\u001b[0m     \u001b[39m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[1;32m--> 708\u001b[0m     mgr \u001b[39m=\u001b[39m dict_to_mgr(data, index, columns, dtype\u001b[39m=\u001b[39;49mdtype, copy\u001b[39m=\u001b[39;49mcopy, typ\u001b[39m=\u001b[39;49mmanager)\n\u001b[0;32m    709\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, ma\u001b[39m.\u001b[39mMaskedArray):\n\u001b[0;32m    710\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mnumpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mma\u001b[39;00m \u001b[39mimport\u001b[39;00m mrecords\n",
-      "File \u001b[1;32mc:\\Users\\Enzo\\Documents\\GitHub\\CSINTSY-rotten-fruits-classification\\.venv\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:481\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[1;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[0;32m    477\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    478\u001b[0m         \u001b[39m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[0;32m    479\u001b[0m         arrays \u001b[39m=\u001b[39m [x\u001b[39m.\u001b[39mcopy() \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(x, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39melse\u001b[39;00m x \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m arrays]\n\u001b[1;32m--> 481\u001b[0m \u001b[39mreturn\u001b[39;00m arrays_to_mgr(arrays, columns, index, dtype\u001b[39m=\u001b[39;49mdtype, typ\u001b[39m=\u001b[39;49mtyp, consolidate\u001b[39m=\u001b[39;49mcopy)\n",
-      "File \u001b[1;32mc:\\Users\\Enzo\\Documents\\GitHub\\CSINTSY-rotten-fruits-classification\\.venv\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:115\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[39mif\u001b[39;00m verify_integrity:\n\u001b[0;32m    113\u001b[0m     \u001b[39m# figure out the index, if necessary\u001b[39;00m\n\u001b[0;32m    114\u001b[0m     \u001b[39mif\u001b[39;00m index \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 115\u001b[0m         index \u001b[39m=\u001b[39m _extract_index(arrays)\n\u001b[0;32m    116\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    117\u001b[0m         index \u001b[39m=\u001b[39m ensure_index(index)\n",
-      "File \u001b[1;32mc:\\Users\\Enzo\\Documents\\GitHub\\CSINTSY-rotten-fruits-classification\\.venv\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:645\u001b[0m, in \u001b[0;36m_extract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    642\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mPer-column arrays must each be 1-dimensional\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    644\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m indexes \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m raw_lengths:\n\u001b[1;32m--> 645\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mIf using all scalar values, you must pass an index\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    647\u001b[0m \u001b[39mif\u001b[39;00m have_series:\n\u001b[0;32m    648\u001b[0m     index \u001b[39m=\u001b[39m union_indexes(indexes)\n",
-      "\u001b[1;31mValueError\u001b[0m: If using all scalar values, you must pass an index"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da66159ba1ab42289a039a8c55404030",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2723 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -401,7 +393,7 @@
     "features_df = pd.DataFrame(columns=columns)\n",
     "\n",
     "segmented_images = []\n",
-    "for image, label in zip(all_images, labels):\n",
+    "for i, image in enumerate(tqdm(all_images)):\n",
     "    # Apply segmentation and extract features\n",
     "    segmented_image, features = extract_features(image)\n",
     "\n",
@@ -409,34 +401,11 @@
     "    segmented_images.append(segmented_image)\n",
     "\n",
     "    # Append features to dataframe\n",
-    "    feature_vector = {'class': label, **feature_vector}\n",
-    "    print(feature_vector)\n",
-    "    features_df = pd.concat([features_df, pd.DataFrame([feature_vector])], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "class\n",
-       "5.0    2723\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# features_df['class'] = features_df['class'].map(\n",
-    "#     {0.0: 'freshapples', 1.0: 'freshbanana', 2.0: 'freshoranges', 3.0: 'rottenapples', 4.0: 'rottenbanana', 5.0: 'rottenoranges'})\n",
+    "    feature_vector = {'class': labels[i]}\n",
+    "    feature_vector.update(features)\n",
+    "    features_df = pd.concat([features_df, pd.DataFrame([feature_vector])], ignore_index=True)\n",
     "\n",
-    "features_df['class'].value_counts()"
+    "features_df['class'] = features_df['class'].map(idx2class)"
    ]
   },
   {
@@ -449,24 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['rottenoranges']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(features_df['class'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +428,7 @@
       "Number of segmented images: 2723\n",
       "Number of features: 29\n",
       "Number of samples: 2723\n",
-      "Number of classes: 1\n"
+      "Number of unique classes: 6\n"
      ]
     },
     {
@@ -494,17 +446,17 @@
     "print(f\"Number of segmented images: {len(segmented_images)}\")\n",
     "print(f\"Number of features: {len(features_df.columns)}\")\n",
     "print(f\"Number of samples: {len(features_df)}\")\n",
-    "print(f\"Number of classes: {len(features_df['class'].unique())}\")\n",
+    "print(f\"Number of unique classes: {len(features_df['class'].unique())}\")\n",
     "plot_images(segmented_images)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('fruits_dataset.csv', index=False)"
+    "features_df.to_csv('fruits_dataset.csv', index=False)"
    ]
   }
  ],
