update: added multiple classifiers

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,8 @@
     "\n",
     "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.svm import SVC\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
      "output_type": "stream",
      "text": [
       "(2723,)\n",
-      "(2723, 12)\n"
+      "(2723, 28)\n"
      ]
     }
    ],
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -115,29 +117,37 @@
      "text": [
       "\n",
       "Training\n",
-      "Accuracy: 0.7596\n",
-      "F1 Score: 0.7621\n",
-      "Precision: 0.7684\n",
-      "Recall: 0.7702\n",
+      "Accuracy: 0.9075\n",
+      "F1 Score: 0.9068\n",
+      "Precision: 0.9078\n",
+      "Recall: 0.9075\n",
       "\n",
       "Validation\n",
-      "Accuracy: 0.6531\n",
-      "F1 Score: 0.6536\n",
-      "Precision: 0.6579\n",
-      "Recall: 0.6676\n"
+      "Accuracy: 0.8105\n",
+      "F1 Score: 0.8080\n",
+      "Precision: 0.8105\n",
+      "Recall: 0.8098\n"
      ]
     }
    ],
    "source": [
     "pipeline = Pipeline([\n",
     "    ('scaler', StandardScaler()),\n",
-    "    ('classifier', SVC(random_state=RANDOM_STATE))\n",
+    "    # ('imputer', SimpleImputer(missing_values=np.nan, strategy='mean')),\n",
+    "    ('classifier', KNeighborsClassifier(n_neighbors=3))\n",
     "])\n",
     "\n",
     "# Ensures equal distribution of classes in each fold\n",
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
     "evaluate_model(pipeline, cv, features, targets, None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
