misc: rename notebook

--- a/classification_querol.ipynb
+++ b/classification_querol.ipynb
@@ -10,20 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "\n",
     "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.feature_selection import RFECV\n",
     "\n",
     "RANDOM_STATE = 42 # Used for reproducibility"
    ]
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +109,59 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Selection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ensures equal distribution of classes in each fold\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
+    "\n",
+    "# model for feature selection\n",
+    "rfecv_model = DecisionTreeClassifier(random_state=RANDOM_STATE)\n",
+    "\n",
+    "rfecv = RFECV(estimator=rfecv_model, cv=cv, scoring=\"balanced_accuracy\")\n",
+    "rfecv = rfecv.fit(features, targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimal number of features: 18\n",
+      "Best features: ['area', 'perimeter', 'convexity', 'red_mean', 'green_mean', 'red_std', 'green_std', 'blue_std', 'green_skew', 'blue_kurt', 's_mean', 'h_std', 's_std', 'h_skew', 's_skew', 'v_skew', 's_kurt', 'v_kurt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The optimal number of features:\", rfecv.n_features_)\n",
+    "print(\"Best features:\", list(features.columns[rfecv.support_]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -133,12 +186,9 @@
    "source": [
     "pipeline = Pipeline([\n",
     "    ('scaler', StandardScaler()),\n",
-    "    # ('imputer', SimpleImputer(missing_values=np.nan, strategy='mean')),\n",
     "    ('classifier', KNeighborsClassifier(n_neighbors=3))\n",
     "])\n",
     "\n",
-    "# Ensures equal distribution of classes in each fold\n",
-    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
     "evaluate_model(pipeline, cv, features, targets, None)"
    ]
   },
