--- a/classification_querol.ipynb
+++ b/classification_querol.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.feature_selection import RFECV\n",
     "\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,212 @@
       "(2723,)\n",
       "(2723, 28)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>area</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>circularity</th>\n",
+       "      <th>convexity</th>\n",
+       "      <th>red_mean</th>\n",
+       "      <th>green_mean</th>\n",
+       "      <th>blue_mean</th>\n",
+       "      <th>red_std</th>\n",
+       "      <th>green_std</th>\n",
+       "      <th>...</th>\n",
+       "      <th>v_mean</th>\n",
+       "      <th>h_std</th>\n",
+       "      <th>s_std</th>\n",
+       "      <th>v_std</th>\n",
+       "      <th>h_skew</th>\n",
+       "      <th>s_skew</th>\n",
+       "      <th>v_skew</th>\n",
+       "      <th>h_kurt</th>\n",
+       "      <th>s_kurt</th>\n",
+       "      <th>v_kurt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>freshapples</td>\n",
+       "      <td>2774.0</td>\n",
+       "      <td>224.65</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>186.778540</td>\n",
+       "      <td>195.670201</td>\n",
+       "      <td>144.949637</td>\n",
+       "      <td>78.619189</td>\n",
+       "      <td>74.775987</td>\n",
+       "      <td>...</td>\n",
+       "      <td>195.867247</td>\n",
+       "      <td>26.064645</td>\n",
+       "      <td>74.313210</td>\n",
+       "      <td>74.729780</td>\n",
+       "      <td>2.127686</td>\n",
+       "      <td>0.241026</td>\n",
+       "      <td>-1.597067</td>\n",
+       "      <td>11.286257</td>\n",
+       "      <td>1.207072</td>\n",
+       "      <td>4.758536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>freshapples</td>\n",
+       "      <td>1463.5</td>\n",
+       "      <td>176.12</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>171.707290</td>\n",
+       "      <td>183.934112</td>\n",
+       "      <td>132.812281</td>\n",
+       "      <td>77.601780</td>\n",
+       "      <td>76.236469</td>\n",
+       "      <td>...</td>\n",
+       "      <td>184.139927</td>\n",
+       "      <td>27.110773</td>\n",
+       "      <td>73.843719</td>\n",
+       "      <td>76.124151</td>\n",
+       "      <td>1.712094</td>\n",
+       "      <td>0.129645</td>\n",
+       "      <td>-1.231315</td>\n",
+       "      <td>8.534175</td>\n",
+       "      <td>1.242978</td>\n",
+       "      <td>3.656074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>freshapples</td>\n",
+       "      <td>20031.5</td>\n",
+       "      <td>602.40</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>182.189931</td>\n",
+       "      <td>136.880879</td>\n",
+       "      <td>132.493662</td>\n",
+       "      <td>81.347379</td>\n",
+       "      <td>106.574611</td>\n",
+       "      <td>...</td>\n",
+       "      <td>182.278241</td>\n",
+       "      <td>38.365581</td>\n",
+       "      <td>94.697792</td>\n",
+       "      <td>81.401297</td>\n",
+       "      <td>3.496730</td>\n",
+       "      <td>0.341599</td>\n",
+       "      <td>-0.946086</td>\n",
+       "      <td>14.083473</td>\n",
+       "      <td>1.228390</td>\n",
+       "      <td>2.884416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>freshapples</td>\n",
+       "      <td>20122.0</td>\n",
+       "      <td>553.67</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>204.151028</td>\n",
+       "      <td>162.443858</td>\n",
+       "      <td>143.651188</td>\n",
+       "      <td>73.629622</td>\n",
+       "      <td>83.117642</td>\n",
+       "      <td>...</td>\n",
+       "      <td>204.218252</td>\n",
+       "      <td>22.782814</td>\n",
+       "      <td>76.408299</td>\n",
+       "      <td>73.654985</td>\n",
+       "      <td>4.610105</td>\n",
+       "      <td>0.396334</td>\n",
+       "      <td>-1.964857</td>\n",
+       "      <td>27.664547</td>\n",
+       "      <td>1.527833</td>\n",
+       "      <td>5.752591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>freshapples</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>33.56</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>176.653320</td>\n",
+       "      <td>117.875877</td>\n",
+       "      <td>121.402443</td>\n",
+       "      <td>71.781614</td>\n",
+       "      <td>87.136889</td>\n",
+       "      <td>...</td>\n",
+       "      <td>177.002412</td>\n",
+       "      <td>80.840884</td>\n",
+       "      <td>75.647223</td>\n",
+       "      <td>72.094720</td>\n",
+       "      <td>-0.270837</td>\n",
+       "      <td>0.032657</td>\n",
+       "      <td>-1.152348</td>\n",
+       "      <td>1.205922</td>\n",
+       "      <td>1.434290</td>\n",
+       "      <td>3.865000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         class     area  perimeter  circularity  convexity    red_mean   \n",
+       "0  freshapples   2774.0     224.65         0.69       0.98  186.778540  \\\n",
+       "1  freshapples   1463.5     176.12         0.59       0.95  171.707290   \n",
+       "2  freshapples  20031.5     602.40         0.69       0.95  182.189931   \n",
+       "3  freshapples  20122.0     553.67         0.82       0.98  204.151028   \n",
+       "4  freshapples     61.5      33.56         0.69       0.88  176.653320   \n",
+       "\n",
+       "   green_mean   blue_mean    red_std   green_std  ...      v_mean      h_std   \n",
+       "0  195.670201  144.949637  78.619189   74.775987  ...  195.867247  26.064645  \\\n",
+       "1  183.934112  132.812281  77.601780   76.236469  ...  184.139927  27.110773   \n",
+       "2  136.880879  132.493662  81.347379  106.574611  ...  182.278241  38.365581   \n",
+       "3  162.443858  143.651188  73.629622   83.117642  ...  204.218252  22.782814   \n",
+       "4  117.875877  121.402443  71.781614   87.136889  ...  177.002412  80.840884   \n",
+       "\n",
+       "       s_std      v_std    h_skew    s_skew    v_skew     h_kurt    s_kurt   \n",
+       "0  74.313210  74.729780  2.127686  0.241026 -1.597067  11.286257  1.207072  \\\n",
+       "1  73.843719  76.124151  1.712094  0.129645 -1.231315   8.534175  1.242978   \n",
+       "2  94.697792  81.401297  3.496730  0.341599 -0.946086  14.083473  1.228390   \n",
+       "3  76.408299  73.654985  4.610105  0.396334 -1.964857  27.664547  1.527833   \n",
+       "4  75.647223  72.094720 -0.270837  0.032657 -1.152348   1.205922  1.434290   \n",
+       "\n",
+       "     v_kurt  \n",
+       "0  4.758536  \n",
+       "1  3.656074  \n",
+       "2  2.884416  \n",
+       "3  5.752591  \n",
+       "4  3.865000  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -105,7 +311,8 @@
     "\n",
     "# Verify shapes of targets and features\n",
     "print(targets.shape)\n",
-    "print(features.shape)"
+    "print(features.shape)\n",
+    "df.head()"
    ]
   },
   {
@@ -118,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +392,8 @@
    ],
    "source": [
     "pipeline = Pipeline([\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('classifier', KNeighborsClassifier(n_neighbors=3))\n",
+    "    ('scaler', StandardScaler()), # Standardization/Normalization\n",
+    "    ('classifier', KNeighborsClassifier(n_neighbors=3)) # Estimation/Classification\n",
     "])\n",
     "\n",
     "evaluate_model(pipeline, cv, features, targets, None)"
