--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "* Querol, Lorenzo\n",
     "* Permito, Joshua\n",
-    "* Pineda, Ralph"
+    "* Pineda, Ralph\n",
+    "* Abello, Hans Matthew"
    ]
   },
   {
